# c-practice

./: .gitignore  CMakeLists.txt  README.md
executables/data_structures/: CMakeLists.txt  array_rotation_main.c  array_simple_main.c  circular_queue_main.c  singly_linked_list_main.c  stack_main.c
executables/pointers/: CMakeLists.txt  pointers_main.c
executables/searching/: CMakeLists.txt  binary_search_main.c
include/data_structures/array/: array_rotation.h  array_simple.h
include/data_structures/linked_list/: singly_linked_list.h
include/data_structures/queue/: circular_queue.h
include/data_structures/stack/: stack.h
include/pointers/: pointers.h
include/searching/: binary_search.h
src/data_structures/: CMakeLists.txt  array_rotation.c  array_simple.c  circular_queue.c  singly_linked_list.c  stack.c
src/pointers/: CMakeLists.txt  pointers.c
src/searching/: CMakeLists.txt  binary_search.c
